Bug 1722328 - Use defaultURI to verify data and javascript schemes with '//' during parsing. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D195891